// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Invoices Api all() parse the returned data correctly 1`] = `
{
  "data": [
    {
      "buyer": {
        "company": {
          "additional_street": "Bâtiment D",
          "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
          "administrative_area": null,
          "country": /* Country Instance => */ "FR",
          "id": 1,
          "invoice_identifier": "0225:123456789_LOCATION",
          "is_public_entity": false,
          "legal_name": "Testing, Inc",
          "locality": "Annecy",
          "note": "Anciennement Machin, Inc.",
          "phone": /* Phone Instance => */ "+33123456789",
          "postal_code": "74000",
          "registration_id": "12345678900001",
          "service_code": null,
          "street": "10 avenue de la gare",
          "vat_number": "FR32123456789",
        },
        "email": "tester@loxya.com",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "id": 1,
        "last_name": "Fountain",
        "reference": "0001",
      },
      "child_invoice": null,
      "created_at": /* DateTime Instance => */ "2020-01-30 14:00:00",
      "currency": /* Currency Instance => */ "EUR",
      "date": /* DateTime Instance => */ "2020-01-30 14:00:00",
      "due_date": /* Day Instance => */ "2020-02-15",
      "due_delay": null,
      "format": 1,
      "global_tax_exemption_code": null,
      "global_tax_exemption_reason": null,
      "global_tax_regime": null,
      "id": 1,
      "is_cancelled": false,
      "is_credit_note": false,
      "is_electronic": false,
      "is_overdue": true,
      "is_prepayment": false,
      "lang": "fr",
      "number": "2020-00001",
      "order_number": null,
      "parent_estimate": null,
      "parent_invoice": null,
      "status": "partially-paid",
      "total_taxes": [
        {
          "is_rate": true,
          "name": "T.V.A.",
          "total": /* Decimal Instance => */ "60",
          "value": /* Decimal Instance => */ "20",
        },
      ],
      "total_with_taxes": /* Decimal Instance => */ "604.13",
      "total_without_taxes": /* Decimal Instance => */ "544.13",
      "url": {
        "pdf": "http://loxya.test/invoices/1/pdf",
        "ubl": null,
      },
    },
    {
      "buyer": {
        "company": null,
        "email": "tester2@loxya.com",
        "first_name": "Roger",
        "full_name": "Roger Rabbit",
        "id": 2,
        "last_name": "Rabbit",
        "reference": "0002",
      },
      "child_invoice": null,
      "created_at": /* DateTime Instance => */ "2020-06-16 12:30:45",
      "currency": /* Currency Instance => */ "EUR",
      "date": /* DateTime Instance => */ "2020-06-16 12:30:45",
      "due_date": null,
      "due_delay": 15,
      "format": 3,
      "global_tax_exemption_code": null,
      "global_tax_exemption_reason": null,
      "global_tax_regime": null,
      "id": 2,
      "is_cancelled": false,
      "is_credit_note": false,
      "is_electronic": true,
      "is_overdue": false,
      "is_prepayment": false,
      "lang": "en",
      "number": "2020-00002",
      "order_number": "BC-0001",
      "parent_estimate": null,
      "parent_invoice": null,
      "status": "paid",
      "total_taxes": [
        {
          "base": /* Decimal Instance => */ "2380.51",
          "total": /* Decimal Instance => */ "476.1",
          "type": "S",
          "value": /* Decimal Instance => */ "20",
        },
        {
          "base": /* Decimal Instance => */ "1026",
          "total": /* Decimal Instance => */ "102.6",
          "type": "S",
          "value": /* Decimal Instance => */ "10",
        },
      ],
      "total_with_taxes": /* Decimal Instance => */ "3985.21",
      "total_without_taxes": /* Decimal Instance => */ "3406.51",
      "url": {
        "pdf": "http://loxya.test/invoices/2/pdf",
        "ubl": "http://loxya.test/invoices/2/ubl",
      },
    },
    {
      "buyer": {
        "company": {
          "additional_street": "Bâtiment D",
          "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
          "administrative_area": null,
          "country": /* Country Instance => */ "FR",
          "id": 1,
          "invoice_identifier": "0225:123456789_LOCATION",
          "is_public_entity": false,
          "legal_name": "Testing, Inc",
          "locality": "Annecy",
          "note": "Anciennement Machin, Inc.",
          "phone": /* Phone Instance => */ "+33123456789",
          "postal_code": "74000",
          "registration_id": "12345678900001",
          "service_code": null,
          "street": "10 avenue de la gare",
          "vat_number": "FR32123456789",
        },
        "email": "tester@loxya.com",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "id": 1,
        "last_name": "Fountain",
        "reference": "0001",
      },
      "child_invoice": null,
      "created_at": /* DateTime Instance => */ "2020-09-15 10:00:00",
      "currency": /* Currency Instance => */ "EUR",
      "date": /* DateTime Instance => */ "2020-09-15 10:00:00",
      "due_date": /* Day Instance => */ "2020-10-15",
      "due_delay": null,
      "format": 3,
      "global_tax_exemption_code": null,
      "global_tax_exemption_reason": null,
      "global_tax_regime": null,
      "id": 3,
      "is_cancelled": false,
      "is_credit_note": false,
      "is_electronic": true,
      "is_overdue": true,
      "is_prepayment": false,
      "lang": "fr",
      "number": "2020-00003",
      "order_number": null,
      "parent_estimate": null,
      "parent_invoice": null,
      "status": "pending",
      "total_taxes": [
        {
          "base": /* Decimal Instance => */ "75",
          "reason": [],
          "type": "K",
        },
      ],
      "total_with_taxes": /* Decimal Instance => */ "75",
      "total_without_taxes": /* Decimal Instance => */ "75",
      "url": {
        "pdf": "http://loxya.test/invoices/3/pdf",
        "ubl": "http://loxya.test/invoices/3/ubl",
      },
    },
    {
      "buyer": {
        "company": null,
        "email": "tester2@loxya.com",
        "first_name": "Roger",
        "full_name": "Roger Rabbit",
        "id": 2,
        "last_name": "Rabbit",
        "reference": "0002",
      },
      "child_invoice": null,
      "created_at": /* DateTime Instance => */ "2021-06-01 10:00:00",
      "currency": /* Currency Instance => */ "EUR",
      "date": /* DateTime Instance => */ "2021-06-01 10:00:00",
      "due_date": null,
      "due_delay": 20,
      "format": 3,
      "global_tax_exemption_code": null,
      "global_tax_exemption_reason": null,
      "global_tax_regime": null,
      "id": 4,
      "is_cancelled": false,
      "is_credit_note": false,
      "is_electronic": true,
      "is_overdue": true,
      "is_prepayment": false,
      "lang": "fr",
      "number": "2021-00001",
      "order_number": "BC-0002",
      "parent_estimate": null,
      "parent_invoice": null,
      "status": "pending",
      "total_taxes": [
        {
          "base": /* Decimal Instance => */ "5",
          "total": /* Decimal Instance => */ "0",
          "type": "S",
          "value": /* Decimal Instance => */ "0",
        },
        {
          "base": /* Decimal Instance => */ "700",
          "reason": [
            "VATEX-EU-79-C",
            "VATEX-EU-151-1D",
          ],
          "type": "E",
        },
      ],
      "total_with_taxes": /* Decimal Instance => */ "705",
      "total_without_taxes": /* Decimal Instance => */ "705",
      "url": {
        "pdf": "http://loxya.test/invoices/4/pdf",
        "ubl": "http://loxya.test/invoices/4/ubl",
      },
    },
    {
      "buyer": {
        "company": {
          "additional_street": "Bâtiment D",
          "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
          "administrative_area": null,
          "country": /* Country Instance => */ "FR",
          "id": 1,
          "invoice_identifier": "0225:123456789_LOCATION",
          "is_public_entity": false,
          "legal_name": "Testing, Inc",
          "locality": "Annecy",
          "note": "Anciennement Machin, Inc.",
          "phone": /* Phone Instance => */ "+33123456789",
          "postal_code": "74000",
          "registration_id": "12345678900001",
          "service_code": null,
          "street": "10 avenue de la gare",
          "vat_number": "FR32123456789",
        },
        "email": "tester@loxya.com",
        "first_name": "Jean",
        "full_name": "Jean Fountain",
        "id": 1,
        "last_name": "Fountain",
        "reference": "0001",
      },
      "child_invoice": null,
      "created_at": /* DateTime Instance => */ "2021-02-15 10:00:00",
      "currency": /* Currency Instance => */ "EUR",
      "date": /* DateTime Instance => */ "2021-02-15 10:00:00",
      "due_date": null,
      "due_delay": 0,
      "format": 3,
      "global_tax_exemption_code": null,
      "global_tax_exemption_reason": null,
      "global_tax_regime": null,
      "id": 5,
      "is_cancelled": false,
      "is_credit_note": false,
      "is_electronic": true,
      "is_overdue": true,
      "is_prepayment": true,
      "lang": "en",
      "number": "2021-00002",
      "order_number": null,
      "parent_estimate": {
        "created_at": /* DateTime Instance => */ "2021-01-30 14:00:00",
        "currency": /* Currency Instance => */ "EUR",
        "date": /* DateTime Instance => */ "2021-01-30 14:00:00",
        "format": 3,
        "global_tax_exemption_code": null,
        "global_tax_exemption_reason": null,
        "global_tax_regime": null,
        "has_final_invoice": false,
        "id": 1,
        "number": "D-2021-00001",
        "status": "accepted",
        "total_taxes": [
          {
            "base": /* Decimal Instance => */ "882.07",
            "total": /* Decimal Instance => */ "176.41",
            "type": "S",
            "value": /* Decimal Instance => */ "20",
          },
          {
            "base": /* Decimal Instance => */ "4.57",
            "total": /* Decimal Instance => */ "0.25",
            "type": "S",
            "value": /* Decimal Instance => */ "5.5",
          },
        ],
        "total_with_taxes": /* Decimal Instance => */ "1063.3",
        "total_without_taxes": /* Decimal Instance => */ "886.64",
        "url": "http://loxya.test/estimates/1/pdf",
      },
      "parent_invoice": null,
      "status": "pending",
      "total_taxes": [
        {
          "base": /* Decimal Instance => */ "82.96",
          "total": /* Decimal Instance => */ "16.59",
          "type": "S",
          "value": /* Decimal Instance => */ "20",
        },
        {
          "base": /* Decimal Instance => */ "0.43",
          "total": /* Decimal Instance => */ "0.02",
          "type": "S",
          "value": /* Decimal Instance => */ "5.5",
        },
      ],
      "total_with_taxes": /* Decimal Instance => */ "100",
      "total_without_taxes": /* Decimal Instance => */ "83.39",
      "url": {
        "pdf": "http://loxya.test/invoices/5/pdf",
        "ubl": "http://loxya.test/invoices/5/ubl",
      },
    },
    {
      "buyer": {
        "company": null,
        "email": "tester2@loxya.com",
        "first_name": "Roger",
        "full_name": "Roger Rabbit",
        "id": 2,
        "last_name": "Rabbit",
        "reference": "0002",
      },
      "child_invoice": null,
      "created_at": /* DateTime Instance => */ "2021-08-01 10:00:00",
      "currency": /* Currency Instance => */ "EUR",
      "date": /* DateTime Instance => */ "2021-08-01 10:00:00",
      "due_date": null,
      "due_delay": 30,
      "format": 3,
      "global_tax_exemption_code": null,
      "global_tax_exemption_reason": null,
      "global_tax_regime": null,
      "id": 6,
      "is_cancelled": false,
      "is_credit_note": false,
      "is_electronic": false,
      "is_overdue": true,
      "is_prepayment": false,
      "lang": "fr",
      "number": "2021-00003",
      "order_number": null,
      "parent_estimate": null,
      "parent_invoice": null,
      "status": "partially-paid",
      "total_taxes": [
        {
          "base": /* Decimal Instance => */ "900",
          "total": /* Decimal Instance => */ "180",
          "type": "S",
          "value": /* Decimal Instance => */ "20",
        },
      ],
      "total_with_taxes": /* Decimal Instance => */ "1080",
      "total_without_taxes": /* Decimal Instance => */ "900",
      "url": {
        "pdf": "http://loxya.test/invoices/6/pdf",
        "ubl": "http://loxya.test/invoices/6/ubl",
      },
    },
  ],
  "pagination": {
    "currentPage": 1,
    "perPage": 6,
    "total": {
      "items": 6,
      "pages": 1,
    },
  },
}
`;

exports[`Invoices Api one() parse the returned data correctly 1`] = `
{
  "buyer": {
    "additional_street": null,
    "address": "1, somewhere av.
12340 Megacity",
    "administrative_area": null,
    "company": {
      "additional_street": "Bâtiment D",
      "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
      "administrative_area": null,
      "country": /* Country Instance => */ "FR",
      "id": 1,
      "invoice_identifier": "0225:123456789_LOCATION",
      "is_public_entity": false,
      "legal_name": "Testing, Inc",
      "locality": "Annecy",
      "note": "Anciennement Machin, Inc.",
      "phone": /* Phone Instance => */ "+33123456789",
      "postal_code": "74000",
      "registration_id": "12345678900001",
      "service_code": null,
      "street": "10 avenue de la gare",
      "vat_number": "FR32123456789",
    },
    "company_id": 1,
    "country": /* Country Instance => */ "FR",
    "email": "tester@loxya.com",
    "first_name": "Jean",
    "full_name": "Jean Fountain",
    "id": 1,
    "is_deleted": false,
    "is_invoiceable": true,
    "language": "en",
    "last_name": "Fountain",
    "locality": "Megacity",
    "note": null,
    "phone": null,
    "postal_code": "12340",
    "reference": "0001",
    "street": "1, somewhere av.",
    "user_id": 1,
  },
  "child_invoice": null,
  "created_at": /* DateTime Instance => */ "2020-01-30 14:00:00",
  "currency": /* Currency Instance => */ "EUR",
  "date": /* DateTime Instance => */ "2020-01-30 14:00:00",
  "due_date": /* Day Instance => */ "2020-02-15",
  "due_delay": null,
  "format": 1,
  "global_tax_exemption_code": null,
  "global_tax_exemption_reason": null,
  "global_tax_regime": null,
  "id": 1,
  "is_cancelled": false,
  "is_credit_note": false,
  "is_electronic": false,
  "is_overdue": true,
  "is_prepayment": false,
  "is_prepayment_final": false,
  "lang": "fr",
  "number": "2020-00001",
  "order_number": null,
  "parent_estimate": null,
  "parent_invoice": null,
  "payments": [
    {
      "amount": /* Decimal Instance => */ "200",
      "date": /* DateTime Instance => */ "2020-02-01 10:00:00",
      "id": 1,
      "method": "card",
      "reference": "PAY-0001",
      "taxes_breakdown": null,
    },
    {
      "amount": /* Decimal Instance => */ "150",
      "date": /* DateTime Instance => */ "2020-02-10 15:30:00",
      "id": 2,
      "method": "transfer",
      "reference": null,
      "taxes_breakdown": null,
    },
  ],
  "status": "partially-paid",
  "total_taxes": [
    {
      "is_rate": true,
      "name": "T.V.A.",
      "total": /* Decimal Instance => */ "60",
      "value": /* Decimal Instance => */ "20",
    },
  ],
  "total_with_taxes": /* Decimal Instance => */ "604.13",
  "total_without_taxes": /* Decimal Instance => */ "544.13",
  "url": {
    "pdf": "http://loxya.test/invoices/1/pdf",
    "ubl": null,
  },
}
`;
